<resources>
    <string name="app_name">application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_at_10_00_pm_ma">At 10:00 PM, maximum sustained winds of up to 110kph near the center and gustiness of up to 140 kph.</string>
<string name="lbl_thu">THU</string>
<string name="lbl_m">M</string>
<string name="msg_labangon_baske">Labangon 
Basketball Gym</string>
<string name="lbl_march">March</string>
<string name="lbl_12_pm">12 PM</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account?</string>
<string name="msg_ground_water_le">Ground-water level</string>
<string name="lbl_s">S</string>
<string name="msg_confirm_passwor">Confirm Password</string>
<string name="msg_basketball_cour">Basketball Court</string>
<string name="lbl_t">T</string>
<string name="lbl_w">W</string>
<string name="lbl_load_more">Load more...</string>
<string name="msg_tisa_barangay_h">Tisa
Barangay Hall</string>
<string name="lbl_ft">ft</string>
<string name="msg_to_instantly_ac">To instantly access forecasts, warnings and other useful weather information on our mobile phones. To provide the public with unprecedented flexibility: users choose the information they want, how they get it and how it looks. Present weather and climate information services to the right people, in the right places and at the right times, so they can make informed lifesaving, business and leisure decisions. Display the weather minute basis accurately, hourly, daily, weekly and even monthly. provide information people and organizations can use to reduce weather-related losses and enhance societal benefits.</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_262">26°</string>
<string name="lbl_log_out">Log Out</string>
<string name="msg_stay_inside_as">Stay inside as much as possible. Your home is the safest place to be; don\u2019t go out unless extremely necessary. </string>
<string name="msg_convenience_sto">Convenience Stores</string>
<string name="lbl_52">52</string>
<string name="lbl_wind">Wind</string>
<string name="lbl_monday_31_march">Monday 31 March</string>
<string name="lbl_location">Location
</string>
<string name="msg_at_4_00_pm_max">At 4:00 PM, maximum sustained winds of up to 105kph near the center and gustiness of up to 130 kph.</string>
<string name="lbl_normal">Normal</string>
<string name="lbl_username">Username</string>
<string name="lbl_your_location">Your location</string>
<string name="msg_storm_surge_is">Storm surge is POSSIBLE</string>
<string name="lbl_c">C</string>
<string name="lbl_ndrrmc">NDRRMC</string>
<string name="lbl_f">F</string>
<string name="msg_help_and_suppor">Help And Support</string>
<string name="lbl_252">25°</string>
<string name="lbl_feet">feet</string>
<string name="lbl_032_3452_5432">+032 3452 5432</string>
<string name="msg_we_see_a_world">"We see a world where everybody lacks information about the weather \u2014 united in the joy of movement. Driven by our passion for informing and our instinct for innovation, we aim to bring weather information to every people in the world. To be the world's most successful and important information application company. Successful in helping out customers apply technology to solve their problems. To create value in the community."</string>
<string name="lbl_alert">ALERT</string>
<string name="msg_there_is_a_sign">There is a significant threat to life. Evacuation is a must.</string>
<string name="lbl_history">History</string>
<string name="lbl_high">HIGH</string>
<string name="lbl_enter_username">Enter Username</string>
<string name="lbl_csit238">CSIT238</string>
<string name="lbl_242">24</string>
<string name="msg_turn_on_locatio">Turn on Location</string>
<string name="lbl_30">30°</string>
<string name="lbl_hospital">HOSPITAL
</string>
<string name="lbl_15ft">15ft</string>
<string name="lbl_31">31°</string>
<string name="lbl_vision">Vision</string>
<string name="lbl_34">34°</string>
<string name="lbl_35">35°</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="lbl_32">32</string>
<string name="lbl_33">33°</string>
<string name="lbl_password">Password</string>
<string name="msg_remember_my_pas">Remember My Password</string>
<string name="msg_the_center_of_s">The center of Super typhoon "ODETTE" was estimated based on all available data at 700 km West of Southern Cebu.</string>
<string name="msg_cybercloud_emai">cybercloud@email.com</string>
<string name="lbl_daily_weather">Daily weather</string>
<string name="msg_see_questions">See questions (18)</string>
<string name="lbl_your_email">Your Email</string>
<string name="lbl_bio">Bio
</string>
<string name="lbl_20">20</string>
<string name="lbl_24">24°</string>
<string name="lbl_0ft">0ft</string>
<string name="lbl_27">27°</string>
<string name="msg_phone_032_5643">Phone
+032 5643 3245</string>
<string name="lbl_28">28</string>
<string name="lbl_cybercloud_inc">CyberCloud Inc.</string>
<string name="lbl_25">25</string>
<string name="lbl_26">26</string>
<string name="lbl_moderate">Moderate</string>
<string name="lbl_29">29°</string>
<string name="msg_specific_evac_a">Specific evac area</string>
<string name="lbl_humidity">Humidity</string>
<string name="lbl_weather">Weather</string>
<string name="lbl_next_7_days">Next 7 days</string>
<string name="msg_elementary_scho">Elementary School</string>
<string name="msg_0_08_of_rain_i">0.08\u201d of rain in next 12 hrs</string>
<string name="lbl_contact_us">Contact Us</string>
<string name="lbl_10ft">10ft</string>
<string name="lbl_12">12</string>
<string name="lbl_13">13</string>
<string name="lbl_10">10</string>
<string name="lbl_patrick_bacalso">Patrick Bacalso</string>
<string name="lbl_11">11</string>
<string name="lbl_sign_up">Sign Up</string>
<string name="lbl_2_pm">2 PM</string>
<string name="lbl_16">16</string>
<string name="lbl_sign_up2">Sign up</string>
<string name="msg_cit_universit">CIT - University</string>
<string name="lbl_17">17</string>
<string name="lbl_14">14</string>
<string name="lbl_15">15</string>
<string name="lbl_18">18</string>
<string name="lbl_19">19</string>
<string name="lbl_advisory_2">Advisory 2:</string>
<string name="msg_district_govern">District Government Office</string>
<string name="lbl_advisory_1">Advisory 1:</string>
<string name="lbl_advisory_3">Advisory 3:</string>
<string name="lbl_register">Register</string>
<string name="lbl_landing_page">Landing Page</string>
<string name="lbl_save">Save</string>
<string name="lbl_292">29</string>
<string name="lbl_8_am">8 AM</string>
<string name="lbl_01">01</string>
<string name="lbl_02">02</string>
<string name="lbl_14_00">14.00</string>
<string name="lbl_20ft">20ft</string>
<string name="lbl_police">POLICE</string>
<string name="lbl_tips3">Tips</string>
<string name="lbl_tips2">Tips
</string>
<string name="msg_labangon_cebu">Labangon, Cebu Philippines</string>
<string name="lbl_forecast">FORECAST</string>
<string name="msg_n_baclaso_ave">N.Baclaso Ave. Cebu City</string>
<string name="msg_department_of_s">Department of Social Welfare Services</string>
<string name="lbl_previous_5_days">Previous 5 days</string>
<string name="lbl_bfp">BFP</string>
<string name="msg_location_n_bacl">Location
N.Baclaso Ave. Cebu City</string>
<string name="lbl_282">28°</string>
<string name="lbl_no_alert">NO ALERT</string>
<string name="lbl_7_am">7 AM</string>
<string name="lbl_your_name">Your name</string>
<string name="msg_labangon_barang">Labangon Barangay Hall</string>
<string name="lbl_send_a_message">Send a message</string>
<string name="lbl_bright">Bright</string>
<string name="lbl_settings">Settings</string>
<string name="lbl_or">or</string>
<string name="lbl_share_the_app">Share The App</string>
<string name="lbl_help">Help</string>
<string name="msg_storm_surge_is3">Storm surge is CATASTROPHIC</string>
<string name="msg_storm_surge_is2">Storm surge is EXPECTED</string>
<string name="lbl_273">27</string>
<string name="lbl_alert_level">Alert level</string>
<string name="lbl_272">27 </string>
<string name="lbl_tips">TIPS</string>
<string name="msg_hospital_032_1">HOSPITAL
+032 1234 5678</string>
<string name="msg_evacuation_area3">Evacuation areas</string>
<string name="lbl_police2">Police</string>
<string name="msg_change_alert_le">Change alert level</string>
<string name="lbl_1_pm">1 PM</string>
<string name="msg_evacuation_area2">Evacuation areas near your location</string>
<string name="msg_patrick_bacals">\@patrick.bacalso
Username</string>
<string name="lbl_phone">Phone
</string>
<string name="lbl_302">30</string>
<string name="msg_bio_add_a_few_w">Bio
Add a few words about yourself</string>
<string name="lbl_history2">HISTORY</string>
<string name="msg_cebu_philippin">Cebu, Philippines</string>
<string name="lbl_sign_in">Sign In</string>
<string name="lbl_tip_2">Tip 2:</string>
<string name="lbl_tip_1">Tip 1:</string>
<string name="lbl_user_profile">User Profile</string>
<string name="lbl_15_00">15.00</string>
<string name="msg_patrick_bacals2">\@patrick.bacalso
</string>
<string name="msg_forgot_password">Forgot password?</string>
<string name="lbl_low">LOW</string>
<string name="lbl_cancel">Cancel</string>
<string name="lbl_by_month">BY MONTH</string>
<string name="lbl_preception">Preception</string>
<string name="lbl_wed">WED</string>
<string name="lbl_edit_profile">Edit profile</string>
<string name="lbl_cloudy">Cloudy</string>
<string name="msg_set_profile_pho">Set Profile Photo</string>
<string name="msg_questions_and_a">Questions and Answer</string>
<string name="lbl_alarm">ALARM</string>
<string name="msg_write_your_mess">Write your message here</string>
<string name="lbl_sea_level">Sea level</string>
<string name="lbl_advisory">Advisory</string>
<string name="msg_name_cybercloud">Name
CyberCloud Inc.</string>
<string name="msg_patrick_bacalso">Patrick Bacalso
CSIT238</string>
<string name="lbl_cebu_city">Cebu, City</string>
<string name="msg_daily_weather_n">Daily weather next</string>
<string name="lbl_feels_25">Feels 25°</string>
<string name="msg_today_s_forecas">Today\u2019s Forecast</string>
<string name="msg_5ft_above_sea_l">5ft above sea level</string>
<string name="lbl_about_us2">About us</string>
<string name="lbl_mon">MON</string>
<string name="msg_preparation_mea">Preparation measures must be carried out. Stay away from the coast.</string>
<string name="lbl_tue">TUE</string>
<string name="msg_water_level_rad">Water level radius</string>
<string name="msg_last_year_on_th">Last Year on this Date</string>
<string name="lbl_confirm">Confirm</string>
<string name="lbl_call">Call</string>
<string name="lbl_342">34</string>
<string name="lbl_direction">Direction</string>
<string name="msg_daily_weather_p">Daily weather previous</string>
<string name="msg_cybercloud_app">CyberCloud app forecasts weather daily, hourly and monthly. It is a weather channel which has accurate weather information. CyberCloud detects weather in your current location automatically. CyberCloud is very helpful with everybody. If you know weather information, You can prepare your plan carefully, you will be sucessful at work and have better life.</string>
<string name="lbl_about_us">About Us</string>
<string name="lbl_create_account">Create Account</string>
<string name="lbl_today">Today</string>
<string name="lbl_monthly_weather">Monthly weather</string>
<string name="lbl_barangay">BARANGAY</string>
<string name="lbl_splash_screen">Splash Screen</string>
<string name="lbl_032_5643_3245">+032 5643 3245</string>
<string name="msg_lorem_ipsum_dol">     Lorem ipsum dolor sit amet, cons ectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</string>
<string name="lbl">°</string>
<string name="lbl_6">6</string>
<string name="lbl_7">7</string>
<string name="lbl_8">8</string>
<string name="lbl_9">9</string>
<string name="lbl_322">32°</string>
</resources>