<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="monthlyWeather2RowModel" type="com.application.app.modules.monthlyweather.data.model.MonthlyWeather2RowModel"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearGroup"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:id="@+id/linearGroup827"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txt6"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt6}"
                style="@style/txtOpenSansromanregular18_1" tools:text="@string/lbl_6"/>
            <TextView android:ellipsize="end" android:id="@+id/txt7"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt7}"
                style="@style/txtOpenSansromanregular18_1" tools:text="@string/lbl_7"/>
            <TextView android:ellipsize="end" android:id="@+id/txt8"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt8}"
                style="@style/txtOpenSansromanregular18_1" tools:text="@string/lbl_8"/>
            <TextView android:ellipsize="end" android:id="@+id/txt9"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt9}"
                style="@style/txtOpenSansromanregular18_1" tools:text="@string/lbl_9"/>
            <TextView android:ellipsize="end" android:id="@+id/txt10"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt10}"
                style="@style/txtOpenSansromanregular18_1" tools:text="@string/lbl_10"/>
            <TextView android:ellipsize="end" android:id="@+id/txt11"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt11}"
                style="@style/txtOpenSansromanregular18_1" tools:text="@string/lbl_11"/>
            <TextView android:ellipsize="end" android:id="@+id/txt12"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt12}"
                style="@style/txtOpenSansromanregular18_1" tools:text="@string/lbl_12"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearGroup828"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <ImageView android:id="@+id/imageCloudyday3"
                android:layout_height="@dimen/_35pxh"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_width="@dimen/_35pxh"
                android:scaleType="fitXY" android:src="@drawable/img_cloudyday1"/>
            <ImageView android:id="@+id/imageRain12"
                android:layout_height="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="@dimen/_35pxh"
                android:scaleType="fitXY" android:src="@drawable/img_rain11"/>
            <ImageView android:id="@+id/imageRain2"
                android:layout_height="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="@dimen/_35pxh"
                android:scaleType="fitXY" android:src="@drawable/img_rain1"/>
            <ImageView android:id="@+id/imageH2"
                android:layout_height="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="@dimen/_35pxh"
                android:scaleType="fitXY" android:src="@drawable/img_h1"/>
            <ImageView android:id="@+id/imageCloudyday4"
                android:layout_height="@dimen/_35pxh"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_width="@dimen/_35pxh"
                android:scaleType="fitXY" android:src="@drawable/img_cloudyday1"/>
            <ImageView android:id="@+id/imageCloudy12"
                android:layout_height="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="@dimen/_35pxh"
                android:scaleType="fitXY" android:src="@drawable/img_cloudy11"/>
            <ImageView android:id="@+id/imageS12"
                android:layout_height="@dimen/_35pxh"
                android:layout_marginEnd="@dimen/_23pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="@dimen/_35pxh"
                android:scaleType="fitXY" android:src="@drawable/img_s11"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearGroup829"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txt32"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt32}"
                style="@style/txtOpenSansromanregular18_1" tools:text="@string/lbl_322"/>
            <TextView android:ellipsize="end" android:id="@+id/txt30"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt30}"
                style="@style/txtOpenSansromanregular18_1" tools:text="@string/lbl_30"/>
            <TextView android:ellipsize="end" android:id="@+id/txt31"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt31}"
                style="@style/txtOpenSansromanregular18_1" tools:text="@string/lbl_30"/>
            <TextView android:ellipsize="end" android:id="@+id/txt33"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt33}"
                style="@style/txtOpenSansromanregular18_1" tools:text="@string/lbl_30"/>
            <TextView android:ellipsize="end" android:id="@+id/txt34"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt34}"
                style="@style/txtOpenSansromanregular18_1" tools:text="@string/lbl_322"/>
            <TextView android:ellipsize="end" android:id="@+id/txt35"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt35}"
                style="@style/txtOpenSansromanregular18_1" tools:text="@string/lbl_34"/>
            <TextView android:ellipsize="end" android:id="@+id/txt36"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt36}"
                style="@style/txtOpenSansromanregular18_1" tools:text="@string/lbl_35"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearGroup830"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txt29"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt29}"
                style="@style/txtOpenSansromanbold18" tools:text="@string/lbl_29"/>
            <TextView android:ellipsize="end" android:id="@+id/txt26"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt26}"
                style="@style/txtOpenSansromanbold18" tools:text="@string/lbl_262"/>
            <TextView android:ellipsize="end" android:id="@+id/txt27"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt27}"
                style="@style/txtOpenSansromanbold18" tools:text="@string/lbl_262"/>
            <TextView android:ellipsize="end" android:id="@+id/txt24"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt24}"
                style="@style/txtOpenSansromanregular18_5" tools:text="@string/lbl_24"/>
            <TextView android:ellipsize="end" android:id="@+id/txt28"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt28}"
                style="@style/txtOpenSansromanregular18_5" tools:text="@string/lbl_27"/>
            <TextView android:ellipsize="end" android:id="@+id/txt37"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt37}"
                style="@style/txtOpenSansromanregular18_5" tools:text="@string/lbl_29"/>
            <TextView android:ellipsize="end" android:id="@+id/txt38"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{monthlyWeather2RowModel.txt38}"
                style="@style/txtOpenSansromanbold18" tools:text="@string/lbl_29"/>
        </LinearLayout>
        <View android:background="@color/cyan_50"
            android:id="@+id/lineLine9"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginTop="@dimen/_27pxv" android:layout_width="@dimen/_390pxh"/>
    </LinearLayout>
</layout>
